# embedded-IA

./: .env.example  .gitignore  DOCKER_GUIDE.md  LICENSE  README.md  WEB_DASHBOARD_SUMMARY.md  developer_agent_test_results.json  docker-compose.yml  docker-manager.sh  mac_m4_stress_test_results.json  package-lock.json  test_multi_agent_system.sh  test_webhook_push.json  verify_phase1.sh
.devcontainer/: devcontainer.json
agent/: Dockerfile  __init__.py  code_fixer.py  demo_workflow.py  event_emitter.py  llm_provider.py  model_selector.py  orchestrator.py  prompts.py  test_cases.py
docs/: ARCHITECTURE.md  BUILD_ORCHESTRATION.md  CLOUD_LLM_OPTIONS.md  DASHBOARD_LLM.md  DEPENDENCY_RESOLVER.md  EXECUTIVE_SUMMARY.md  GITHUB_IMPORT_COMPLETE.md  GITHUB_IMPORT_DESIGN.md  GITHUB_IMPORT_QUICKSTART.md  LLM_USAGE.md  LOCAL_LLM_SETUP.md  MAC_M4_SETUP.md  MULTI_AGENT_SYSTEM.md  MULTI_MODEL_ARCHITECTURE.md  OLLAMA_DOCKER.md  OPTIMIZATION_REPORT.md  ORCHESTRATOR_INTEGRATION_SUMMARY.md  PROJECTS_TAB_GUIDE.md
examples/: chat_with_llm.py  compare_llm_providers.py  demo_dashboard_workflow.py  demo_workflow_simple.py  mac_m4_stress_test.py  show_architecture.py  test_developer_agent.py  test_event_emission.py  test_orchestrator_with_llm.py  test_real_workflow.py  test_real_workflow_api.py  test_real_workflow_simple.py
mcp-server/: QUICKSTART.md  README.md  init.sh  pyproject.toml  test.sh
mcp-server/src/mcp_idf/: __init__.py  client.py  server.py
mcp-server/src/mcp_idf/tools/: __init__.py  artifact_manager.py  file_manager.py  idf_commands.py  qemu_manager.py
web-server/: main.py  (+5 more)
(+63 files in other folders)
