[project]
name = "mcp-idf"
version = "0.1.0"
description = "MCP Server for ESP-IDF toolchain integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
    "pydantic>=2.0.0",
]

[project.scripts]
mcp-idf = "mcp_idf.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
